--- a/IrmandadeDoCodigo.Hub/Components/Layout/NavMenu.razor
+++ b/IrmandadeDoCodigo.Hub/Components/Layout/NavMenu.razor
@@ -18,12 +18,6 @@
             </NavLink>
         </div>
 
-        <div class="nav-item">
-            <NavLink class="nav-link" href="auth">
-                <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
-            </NavLink>
-        </div>
-
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item">
@@ -39,6 +33,11 @@
                             <span class="bi bi-arrow-bar-left-nav-menu" aria-hidden="true"></span> Logout
                         </button>
                     </form>
+                </div>
+                <div class="nav-item">
+                    <NavLink class="nav-link" href="posts">
+                        <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> Meus posts
+                    </NavLink>
                 </div>
             </Authorized>
             <NotAuthorized>
